--- a/MyEcommerceWebsite/BusinessLayer/BusinessLayer.csproj
+++ b/MyEcommerceWebsite/BusinessLayer/BusinessLayer.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ModelLayer\ModelLayer.csproj" />
+    <ProjectReference Include="..\RepositoryLayer\RepositoryLayer.csproj" />
+  </ItemGroup>
+
 </Project>
