Finished signup process

--- a/MyEcommerceWebsite/MyEcommerceWebsite/MyEcommerceWebsite.csproj
+++ b/MyEcommerceWebsite/MyEcommerceWebsite/MyEcommerceWebsite.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <UserSecretsId>f67d264a-4d1b-4eba-9437-9c3d7c47b842</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,11 +10,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj" />
     <ProjectReference Include="..\ModelLayer\ModelLayer.csproj" />
+    <ProjectReference Include="..\RepositoryLayer\RepositoryLayer.csproj" />
   </ItemGroup>
 
 </Project>
